<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/root_element2"
    tools:context=".View.RegistrationActivity">


    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/lira" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:text="Регистрация"
        android:textAlignment="textEnd"
        android:textColor="#384331"
        android:textSize="40sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textColorHint="#384332">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_input"
                android:drawableLeft="@drawable/ic_email"
                android:hint="  Email"
                android:inputType="textEmailAddress"
                android:text=""
                android:textAlignment="center"
                android:textColor="#384331"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textColorHint="#384331">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_input"
                android:drawableLeft="@drawable/ic_lock"
                android:hint="  Пароль"
                android:inputType="textPassword"
                android:text=""
                android:textAlignment="center"
                android:textColor="#384331"
                android:textSize="25sp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textColorHint="#384331">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_input"
                android:drawableLeft="@drawable/ic_person"
                android:hint="  Имя"
                android:textAlignment="center"
                android:inputType="text"
                android:text=""
                android:textColor="#384331"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/flower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textColorHint="#384331">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_input"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="  Телефон"
                android:textAlignment="center"
                android:inputType="phone"
                android:text=""
                android:textColor="#384331"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:background="@drawable/btn_sign_in"
            android:text="Зарегистрироваться"
            android:textColor="#384331"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#AD8665" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:text="Уже есть аккаунт?"
        android:textAlignment="center"
        android:textColor="#DADDE2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignIn2"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/btn_register"
        android:text="Войти"
        android:textColor="#DADDE2"
        android:textStyle="bold"
        app:backgroundTint="#80384331" />

</RelativeLayout>